test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_struct_full_expr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  identifier(x)
  ;
  ;
  )
  ;
  return
  const int(0)
  ;
  }
